--- a/src/elements/screens/styles/About.scss
+++ b/src/elements/screens/styles/About.scss
@@ -5,12 +5,11 @@
   display: flex;
   width: 100%;
   height: 100vh;
-
+  align-items: center;
 
   >img{
     position: absolute;
     width: 30vw;
-    margin-top: 25vh;
     left: 15vw;
     border-radius: 0.5rem;
   }
